# riskfabric

./: Makefile  Readme.AI  Readme.MD
apps/backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
apps/backend/asset/: access.py  admin.py  models.py  serializers.py  views.py
apps/backend/asset/migrations/: 0001_initial.py  0002_asset_access_teams.py  0003_asset_geo_zone_asset_infrastructure_criticality_and_more.py
apps/backend/config/: api_urls.py  celery.py  urls.py
apps/backend/config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
apps/backend/core/: admin.py  audit.py  models.py  permissions.py  tasks.py  tests.py
apps/backend/core/migrations/: 0001_initial.py
apps/backend/data/: dev.sqlite3
apps/backend/integration/: admin.py  models.py  registry.py  serializers.py  services.py  tests.py  tests_api.py  views.py
apps/backend/integration/migrations/: 0001_initial.py  0002_integrationsyncrun_plugin_name_and_more.py
apps/backend/integration/plugins/: base.py  beam_web_service.py  excel_bootstrap.py
apps/backend/risk/: admin.py  models.py  serializers.py  tasks.py  tests.py  tests_api.py  tests_resilience.py  views.py
apps/backend/risk/migrations/: 0001_initial.py  0002_risk_asset_type_risk_business_unit_risk_cost_center_and_more.py  0003_backfill_risk_context.py  0004_riskscoringmethod_alter_risk_impact_and_more.py  0005_seed_scoring_methods.py  0006_riskapproval.py  0007_riskcontrol_risktreatment_control_risknotification.py  0008_riskexception_riskissue.py  (+18 more)
apps/backend/webui/: forms.py  tests.py  urls.py  views.py
(+93 files in other folders)
